--- a/RMDesktopUI/Views/SalesView.xaml
+++ b/RMDesktopUI/Views/SalesView.xaml
@@ -30,8 +30,14 @@
 
         <!--Column 0-->
         <TextBlock Text="Items" Grid.Row="1" Grid.Column="0" />
-        <ListBox x:Name="Products" Grid.Row="2" Grid.Column="0"
-                  Height="200" MinWidth="150" />
+        <ListBox  x:Name="Products" Grid.Row="2" Grid.Column="0"
+                  Height="200" MinWidth="150">
+            <ListBox.ItemTemplate>
+                <DataTemplate>
+                    <TextBlock Text="{Binding ProductName}" />
+                </DataTemplate>
+            </ListBox.ItemTemplate>
+        </ListBox>
 
         <!--Column 1-->
         <StackPanel Orientation="Vertical" Grid.Column="1"
