--- a/RMDesktopUI/Views/UserDisplayView.xaml
+++ b/RMDesktopUI/Views/UserDisplayView.xaml
@@ -31,15 +31,30 @@
         <!--Column 0-->
         <TextBlock Text="Users" Grid.Row="1" Grid.Column="0" />
         <ListBox  x:Name="Users" Grid.Row="2" Grid.Column="0"
-                  MinHeight="200" MinWidth="150" SelectedItem="{Binding SelectedProduct}">
+                  MinHeight="200" MinWidth="150" SelectedItem="SelectedUser">
             <ListBox.ItemTemplate>
                 <DataTemplate>
                     <StackPanel Orientation="Vertical">
                         <TextBlock Text="{Binding Email}" />
-                        <TextBlock Text="{Binding RoleList}" FontSize="18"/>
+                        <TextBlock Text="{Binding RoleList}" FontSize="18" />
                     </StackPanel>
                 </DataTemplate>
             </ListBox.ItemTemplate>
         </ListBox>
+
+        <!-- Column 1-->
+        <StackPanel Orientation="Vertical" Grid.Row="1" Grid.Column="1" Grid.RowSpan="2"
+                    Margin="20 0 0 0">
+            <TextBlock x:Name="SelectedUserName" Margin="0 0 0 10" />
+            <TextBlock Text="Current Roles" />
+            <StackPanel Orientation="Horizontal">
+                <ListBox x:Name="UserRoles" ></ListBox>
+                <Button x:Name="RemoveSelectedRole" Content="Remove" Margin="5 0 0 0" />
+            </StackPanel>
+            <StackPanel Orientation="Horizontal">
+                <ComboBox x:Name="AvailableRoles" />
+                <Button x:Name="AddSelectedRole" Content="AddRole" Margin="5 0 0 0 " />
+            </StackPanel>
+        </StackPanel>
     </Grid>
 </UserControl>
